Update HTML title and service descriptions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>JSBG Consulting | Process improvement, automation, and analytics (Peace River, AB)</title>
+  <title>JSBG Consulting | Process improvement, automation, and analytics</title>
   <meta name="description" content="JSBG Consulting (Shaun Adams) helps organizations simplify operations through process improvement, workflow automation, and data collection/analysis—based in Peace River, Alberta and remote-friendly." />
 
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
@@ -20,7 +20,7 @@
   <meta property="og:description" content="Process improvement, automation, and analytics. Based in Peace River, AB (remote-friendly)." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jsbg.ca/" />
-  <meta property="og:image" content="https://jsbg.ca/assets/img/logo-slogan.png" />
+  <meta property="og:image" content="https://jsbg.ca/assets/img/logo-slogan-noBG.png" />
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -33,7 +33,7 @@
   <header class="header">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="JSBG Consulting home">
-        <img src="/assets/img/logo-slogon-noBG.png" alt="JSBG Consulting" class="site-logo"/>
+        <img src="/assets/img/logo-slogan-noBG.png" alt="JSBG Consulting" class="site-logo"/>
         <span class="sr-only">JSBG Consulting</span>
       </a>
       <nav class="nav" aria-label="Primary">
@@ -85,37 +85,37 @@
 
     <section id="services" class="section">
       <h2>Services</h2>
-      <p class="lead">Small, focused blocks of work with clear deliverables. Replace any placeholder text as you refine the site.</p>
+      <p class="lead"></p>
 
       <div class="grid">
         <article class="card">
           <h3 class="service-title">Process & efficiency improvements</h3>
-          <p class="small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Deliverables might include process maps, bottleneck analysis, and a prioritized improvement plan.</p>
+          <p class="small">Sometimes what you really need are a fresh pair of eyes to take a more objective look at a process to find some meaning gains.</p>
         </article>
 
         <article class="card">
           <h3 class="service-title">Automation & workflow cleanup</h3>
-          <p class="small">Lorem ipsum dolor sit amet. Examples: spreadsheet automation, form-to-sheet pipelines, and reducing duplicate/hand-entered work.</p>
+          <p class="small">Set up automated emails through Google Sheets to save you countless hours copying and pasting the same thing over and over again.</p>
         </article>
 
         <article class="card">
           <h3 class="service-title">Data collection & analysis</h3>
-          <p class="small">Lorem ipsum dolor sit amet. Define what to measure, set up collection, clean the data, and produce reliable reporting.</p>
+          <p class="small">Define what's important, set up good automatic data collection and produce ongoing reliable reporting.</p>
         </article>
 
         <article class="card">
           <h3 class="service-title">Dashboards & reporting setup</h3>
-          <p class="small">Lorem ipsum dolor sit amet. KPI (Key Performance Indicator) definition, dashboard builds, and ongoing maintenance handoff.</p>
+          <p class="small">Having a clean and dynamic dashboard is key to being able to make informed decisions about your business.</p>
         </article>
 
         <article class="card">
           <h3 class="service-title">Documentation & training</h3>
-          <p class="small">Lorem ipsum dolor sit amet. Standard operating procedures, checklists, handover packages, and simple training materials.</p>
+          <p class="small">Document existing tasks helps with consistency and can reveal previously undiscovered opportunities.</p>
         </article>
 
         <article class="card">
           <h3 class="service-title">Implementation support</h3>
-          <p class="small">Lorem ipsum dolor sit amet. Light project coordination: scope, risks, dependencies, and stakeholder alignment.</p>
+          <p class="small">Starting up a new initiative is challenging. Defining scope, aligning stakeholders, identifying risks and dependencies are things we can help with.</p>
         </article>
       </div>
     </section>
@@ -185,24 +185,11 @@
             <a class="btn ghost" href="mailto:shaun@jsbg.ca?subject=Inquiry%20from%20jsbg.ca">shaun@jsbg.ca</a>
           </div>
         </article>
-
-        <article class="card">
-          <h2>Basic info</h2>
-          <p class="small"><strong>Location:</strong> Peace River, AB</p>
-          <p class="small"><strong>Hours:</strong> Lorem ipsum (replace with your preferred availability)</p>
-          <p class="small"><strong>Response time:</strong> Lorem ipsum (e.g., “within 1–2 business days”)</p>
-        </article>
-
-        <article class="card">
-          <h2>Professional links</h2>
-          <p class="small"><a href="https://www.linkedin.com/in/-shaun-adams/" style="text-decoration:none">LinkedIn</a></p>
-          <p class="small">Lorem ipsum placeholder for portfolio links, PDFs, or a short case study list.</p>
-        </article>
       </div>
     </section>
 
     <footer class="footer">
-      <img src="/assets/img/logo.png" alt="JSBG Consulting" class="footer-logo">
+      <img src="/assets/img/logo-noBG.png" alt="JSBG Consulting" class="footer-logo">
       <div>© <span id="y"></span> JSBG</div>
     </footer>
   </main>
