Refactor header and update content in index.html
Updated header class and modified hero section text. Removed placeholder content and refined tool descriptions.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <link rel="canonical" href="https://jsbg.ca/" />
 </head>
 <body>
-  <header class="header">
+  <header class="site-header">
     <div class="header-inner">
-      <a class="brand" href="/" aria-label="JSBG Consulting home">
-        <img src="/assets/img/logo-slogan-noBG.png" alt="JSBG Consulting" class="site-logo"/>
-        <span class="sr-only">JSBG Consulting</span>
-      </a>
-      <nav class="nav" aria-label="Primary">
+      <div class="logo-wrap">
+        <img src="/assets/img/logo-slogan-noBG.png" alt="JSBG Consulting">
+      </div>
+  
+      <nav class="main-nav">
         <a href="#services">Services</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
@@ -44,14 +44,14 @@
     </div>
   </header>
 
+
   <main class="container" id="top">
     <section class="hero">
       <div>
         <span class="kicker"><span class="kicker-dot" aria-hidden="true"></span>Peace River, Alberta • remote-friendly</span>
-        <h1>Simplify operations. Make data usable. Automate the busywork.</h1>
+        <h1>Simplify operations. Make data usable. Automate the busywork. Take back your time and bring your ideas to life.</h1>
         <p>
           I help teams improve processes, streamline workflows, and turn scattered information into clear reporting and dashboards.
-          This site is being refined—some sections contain placeholder text for review.
         </p>
         <div class="btnrow">
           <a class="btn primary" href="#contact">Request a consult</a>
@@ -131,23 +131,16 @@
           <p class="small">Based in Peace River, Alberta. Available for remote work and local on-site projects.</p>
         </article>
 
-        <article class="card">
-          <h2>How I work</h2>
-          <p class="small"><strong>1) Quick discovery:</strong> 30–60 minutes to understand the problem, constraints, and urgency.</p>
-          <p class="small"><strong>2) Tight scope:</strong> define success, deliverables, and timelines (no vague “ongoing consulting” unless you want it).</p>
-          <p class="small"><strong>3) Deliver + handoff:</strong> you get usable artifacts and a simple next-steps plan.</p>
-        </article>
 
         <article class="card">
           <h2>Tools & strengths</h2>
           <div class="badges">
             <span class="badge">Google Workspace (Sheets)</span>
             <span class="badge">Microsoft Office (Excel)</span>
-            <span class="badge">Dashboarding</span>
-            <span class="badge">Documentation systems</span>
-            <span class="badge">Light scripting</span>
+            <span class="badge">Dashboarding (DOMO, Looker)</span>
+            <span class="badge">Light scripting (Python, VBA, AppScript, SQL)</span>
           </div>
-          <p class="small" style="margin-top:12px">Lorem ipsum placeholder: add certifications, example outcomes, and testimonials here.</p>
+          <p class="small" style="margin-top:12px">I am adapatable and can work with a variety of platforms.</p>
         </article>
       </div>
     </section>
